--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,11 +2,19 @@
     display: flex;
     flex-direction: column;
     padding-top: 4rem;
+    
   }
   
   header {
-    text-align: center;
+    justify-content: center;
+    text-align: justify;
     margin-top: 2rem;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  h1{
+    text-align: center;
   }
   
   .photo-gallery {
