--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #b38b59;
+    background-color: #f2f0e8;
     height: 18vh;;
   }
 
