--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,7 +7,7 @@
   
   header {
     justify-content: center;
-    text-align: justify;
+    text-align: center;
     margin-top: 2rem;
     padding-left: 8px;
     padding-right: 8px;
@@ -32,6 +32,15 @@
   .text-section {
     text-align: center;
     margin: 2rem 0;
+  }
+  
+
+  @media screen and (max-width: 768px) {
+    p {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 30px;
+    }
   }
   
 
