--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     background-color: #f2f0e8;
-    height: 18vh;;
+    height: 18vh;
+    bottom: 0;
   }
 
   
