--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,6 +13,29 @@
   transition: background-color 0.3s ease;
 }
 
+.underline-link {
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+}
+
+.underline-link::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.underline-link:hover::after {
+  transform: scaleX(1);
+}
+
+
 .logo-russo {
   width: 120px;
   height: 35.82px;
